data/derived/comb/progs/unify/prog7974.ml.out
Characters 148-149:
  let seen' = if List.mem seen h then seen else seen @ h in
                                                       ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
